buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath 'com.bmuschko:gradle-docker-plugin:3.2.3'
    }
}


plugins {
    id 'java'
    id 'application'
}

apply plugin: 'com.bmuschko.docker-java-application'

docker {
    registryCredentials {
        url = 'https://netifi.azurecr.io'
        username = 'netifi'
        password = 'xv06MJfkZA17wCmy1v9e7kanMtvTsg5+'
    }
    javaApplication {
        baseImage = 'openjdk:8-jre-alpine'
        maintainer = 'Netifi'
        ports = []
        tag = "netifi.azurecr.io/fanout/fanout-client:latest"
    }
}

sourceCompatibility = 1.8

dependencies {
    compile project(':count-vowels-service-idl')
    compile project(':random-string-service-idl')

    compile "io.netifi.proteus:client:$proteusVersion"

    compile 'com.google.protobuf:protobuf-java:3.5.0'

    compile 'org.apache.logging.log4j:log4j-api:2.8.2'
    compile 'org.apache.logging.log4j:log4j-core:2.8.2'
    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.2'

    compile 'io.micrometer:micrometer-registry-atlas:1.0.2'
}

mainClassName = 'io.netifi.proteus.fanout.client.Main'

applicationDefaultJvmArgs = [
        '-XX:+UnlockExperimentalVMOptions',
        '-XX:+UseCGroupMemoryLimitForHeap',
        '-XX:MaxRAMFraction=1',
        '-XX:+UseG1GC',
        '-XX:MaxGCPauseMillis=200',
        '-XX:+AlwaysPreTouch',
        '-XX:+UseStringDeduplication',
        '-XX:+ExplicitGCInvokesConcurrent',
        '-XX:+ParallelRefProcEnabled',
        '-XX:HeapDumpPath=/',
        '-XX:+PrintGCDateStamps',
        '-verbose:gc',
        '-XX:+PrintGCDetails',
        '-Xloggc:gc.log',
        '-XX:+UseGCLogFileRotation',
        '-XX:NumberOfGCLogFiles=10',
        '-XX:GCLogFileSize=100M'
]